components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/allow-app-protocol.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - appProtocol: https
      port: 80
