components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/allow-port-name-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - name: https-web
      port: 80
