components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/allow-port-name-and-appprotocol.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  ports:
  - port: 3306
    name: database
    appProtocol: https
  - port: 80
    name: http-web
