components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: IstioExplicitProtocolSelection
metadata:
  name: explicitprotocolselection
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Service
    namespaceSelector:
      matchExpressions:
        - key: istio.io/rev
          operator: Exists
    excludedNamespaces:
      - cryostat
  parameters:
    protocols:
    - http
    - https
    - http2
    - grpc
    - grpc-web
    - tcp
    - tls
