components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/disallow-no-port-name-and-app-protocol.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - port: 80
