components/gatekeeper-constraints/explicit-protocol-selection/samples/require-explicit-protocol-selection/disallow-port-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - name: http3
      port: 443
